--- a/project/package.json
+++ b/project/package.json
@@ -13,9 +13,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.8.0"
