fix: correct homepage and base path for deployment

--- a/project/package.json
+++ b/project/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lingua-ai-learning-platform",
-  "homepage": "https://karo0202.github.io/-https-github.com-yourusername-karo-language-app",
+  "homepage": "https://karo0202.github.io/karo-.language-.l",
   "private": true,
   "version": "0.0.0",
   "type": "module",
