--- a/project/package.json
+++ b/project/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lingua-ai-learning-platform",
-  "homepage": "https://karo0202.github.io/-https-github.com-yourusername-karo-language-app",
+  "homepage": "https://karo0202.github.io/karo-language-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,7 +19,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.2",
+    "react-router-dom": "^6.25.1",
     "recharts": "^2.8.0"
   },
   "devDependencies": {
